--- a/ChatterThemepack/ThemePack.csproj
+++ b/ChatterThemepack/ThemePack.csproj
@@ -4,8 +4,8 @@
     <AssemblyName>Chatter</AssemblyName>
     <TargetFramework>net472</TargetFramework>
     <AssemblyTitle>Chatter Themes extension pack</AssemblyTitle>
-    <Product>VAICOM Community Edition</Product>
-    <Description>Extension for VAICOM plugin for DCS World</Description>
+    <Product>VAICOM PRO Community Edition</Product>
+    <Description>Extension for VAICOM PRO plugin for DCS World</Description>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
   </PropertyGroup>
