--- a/VA_watchdog/VAICOM_App.csproj
+++ b/VA_watchdog/VAICOM_App.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <AssemblyName>VAICOM</AssemblyName>
+    <AssemblyName>VAICOMPRO</AssemblyName>
     <TargetFramework>net472</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <AssemblyTitle>VAICOM for DCS World</AssemblyTitle>
-    <Product>VAICOM</Product>
-    <Description>Interactive Voice Control for DCS World</Description>
+    <AssemblyTitle>VAICOM PRO for DCS World</AssemblyTitle>
+    <Product>VAICOM PRO</Product>
+    <Description>Interactive Voice Communications for DCS World</Description>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
   </PropertyGroup>
