--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,11 +1,11 @@
 <Project>
   <PropertyGroup>
-	  <AssemblyTitle>VAICOM PRO for DCS World</AssemblyTitle>
-	  <Product>VAICOM PRO Community Edition</Product>
-	  <Description>Interactive Voice Communications for DCS World</Description>
-	  <ProductVersion>3.0.1.4</ProductVersion>
-	  <AssemblyVersion>3.0.1.4</AssemblyVersion>
-	  <FileVersion>3.0.1.4</FileVersion>
+	  <AssemblyTitle>VAICOM for DCS World</AssemblyTitle>
+	  <Product>VAICOM Community Edition</Product>
+	  <Description>Interactive Voice Control for DCS World</Description>
+	  <ProductVersion>3.0.1.7</ProductVersion>
+	  <AssemblyVersion>3.0.1.7</AssemblyVersion>
+	  <FileVersion>3.0.1.7</FileVersion>
 	  <Copyright>MIT</Copyright>
   </PropertyGroup>
 </Project>
