--- a/VAICOM/VAICOM.csproj
+++ b/VAICOM/VAICOM.csproj
@@ -142,6 +142,7 @@ TASKKILL /FI "STATUS eq RUNNING" /F /IM XDesProc.exe</PreBuildEvent>
     <EmbeddedResource Include="Resources\Audio\UI\Stereo 44kHz 16bit -26dB\UI Squelch_LT.wav" />
     <EmbeddedResource Include="Resources\Audio\UI\Stereo 44kHz 16bit -26dB\UI Switch Soft.wav" />
     <EmbeddedResource Include="Resources\Files\EULA.txt" />
+    <EmbeddedResource Include="Resources\Files\LegacyExportmatch.lua" />
     <EmbeddedResource Include="Resources\Files\NoLoadContext" />
     <EmbeddedResource Include="Resources\Files\Updater_Chatter.txt" />
     <EmbeddedResource Include="Resources\Files\Updater_Plugin.txt" />
